components/header/Header.module.scss
.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  max-width: 100vw;
  padding: rem(6) rem(12);
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 4;
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
  transition-property: background-color, backdrop-filter, height;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;

  @include breakpoint(large) {
    padding: rem(6) rem(36);
    // justify-content: flex-end;
    height: 100px;
  }

  &_scrolled {
    background-color: rgba(23, 23, 23, 0.9);
  }

  &_logo {
    @include breakpoint(small) {
      z-index: 4;
    }

    @include breakpoint(large) {
      position: absolute;
      left: 0;
      right: 0;
      bottom: 4px;
      top: 0;
      display: flex;
      justify-content: center;

      img {
        width: 200px;
      }
    }
  }
}

.navigation {
  font-size: 14px;
}

